# public/docs/openapi.yaml
@@ -1,71 +1,60 @@
 openapi: 3.0.3
 info:
-    title: getContact
+    title: 'Buser Rent Car Nasional'
     description: ''
     version: 1.0.0
 servers:
     -
-        url: 'http://get-contact.test'
+        url: 'http://api.brn.com'
 paths:
-    /api/customer:
-        post:
-            summary: 'Masuk sebagai pelanggan'
+    /api/point/missions:
+        get:
+            summary: 'Mendapatkan list data misi.'
             description: ''
             parameters:
                 -
                     in: header
-                    name: Accept
+                    name: Authorization
                     description: ''
-                    example: application/json
+                    example: 'Bearer {YOUR_AUTH_KEY}'
                     schema:
                         type: string
                 -
                     in: header
-                    name: Content-Type
+                    name: Accept
                     description: ''
                     example: application/json
                     schema:
                         type: string
             responses:
-                400:
-                    description: ''
+                200:
+                    description: '200'
                     content:
                         application/json:
                             schema:
                                 type: object
                                 example:
-                                    message: 'Nomor telepon sudah digunakan sebelumnya'
+                                    data: [{ id: 1, active: true, name: 'Daily Check In', description: 'Check In setiap hari', points: 10, parent_id: null, childrens: [] }, { id: 4, active: true, name: Grades, description: null, points: 100, parent_id: null, childrens: [{ id: 5, active: true, name: Excellent, description: null, points: 600, parent_id: 4, childrens: [{ id: 6, active: true, name: Excellent, description: null, points: 100, parent_id: 5, childrens: [] }] }] }]
+                                    links: { first: 'https://api.brn.com/api/point/missions?page=1', last: null, prev: null, next: null }
+                                    meta: { current_page: 1, from: 1, path: 'https://api.brn.com/api/point/missions', per_page: 10, to: 10 }
                                 properties:
-                                    message: { type: string, example: 'Nomor telepon sudah digunakan sebelumnya' }
+                                    data: { type: array, example: [{ id: 1, active: true, name: 'Daily Check In', description: 'Check In setiap hari', points: 10, parent_id: null, childrens: [] }, { id: 4, active: true, name: Grades, description: null, points: 100, parent_id: null, childrens: [{ id: 5, active: true, name: Excellent, description: null, points: 600, parent_id: 4, childrens: [{ id: 6, active: true, name: Excellent, description: null, points: 100, parent_id: 5, childrens: [] }] }] }], items: { type: object } }
+                                    links: { type: object, example: { first: 'https://api.brn.com/api/point/missions?page=1', last: null, prev: null, next: null } }
+                                    meta: { type: object, example: { current_page: 1, from: 1, path: 'https://api.brn.com/api/point/missions', per_page: 10, to: 10 } }
             tags:
-                - Pelanggan
-            requestBody:
-                required: true
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            properties:
-                                name:
-                                    type: string
-                                    description: nama.
-                                    example: 'arya anggara'
-                                address:
-                                    type: string
-                                    description: 'alamat lengkap.'
-                                    example: 'jl. letkol basir surya, tasikmalaya, jawa barat'
-                                phoneNumber:
-                                    type: string
-                                    description: 'nomor telepon.'
-                                    example: '6282127586566'
-                            required:
-                                - phoneNumber
-            security: []
-    /api/customer-contacts:
-        post:
-            summary: 'Membuat data list kontak dari pelanggan'
+                - Point
+    /api/point/histories:
+        get:
+            summary: 'Mendapatkan list data histori point.'
             description: ''
             parameters:
+                -
+                    in: header
+                    name: Authorization
+                    description: ''
+                    example: 'Bearer {YOUR_AUTH_KEY}'
+                    schema:
+                        type: string
                 -
                     in: header
                     name: Accept
@@ -73,9 +62,31 @@ paths:
                     example: application/json
                     schema:
                         type: string
+            responses:
+                200:
+                    description: '200'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    data: [{ id: 2, active: true, name: 'Completed Lesson', description: null, points: 100, get_it_at: '2021-05-29T19:46:48.000000Z' }, { id: 1, active: true, name: 'Daily Check In', description: 'Check In setiap hari', points: 10, get_it_at: '2021-04-29T19:46:48.000000Z' }]
+                                    links: { first: 'https://api.brn.com/api/point/missions?page=1', last: null, prev: null, next: null }
+                                    meta: { current_page: 1, from: 1, path: 'https://api.brn.com/api/point/missions', per_page: 10, to: 10 }
+                                properties:
+                                    data: { type: array, example: [{ id: 2, active: true, name: 'Completed Lesson', description: null, points: 100, get_it_at: '2021-05-29T19:46:48.000000Z' }, { id: 1, active: true, name: 'Daily Check In', description: 'Check In setiap hari', points: 10, get_it_at: '2021-04-29T19:46:48.000000Z' }], items: { type: object } }
+                                    links: { type: object, example: { first: 'https://api.brn.com/api/point/missions?page=1', last: null, prev: null, next: null } }
+                                    meta: { type: object, example: { current_page: 1, from: 1, path: 'https://api.brn.com/api/point/missions', per_page: 10, to: 10 } }
+            tags:
+                - Point
+    /api/ping:
+        get:
+            summary: 'Ping the server.'
+            description: ''
+            parameters:
                 -
                     in: header
-                    name: Content-Type
+                    name: Accept
                     description: ''
                     example: application/json
                     schema:
@@ -88,25 +99,15 @@ paths:
                             schema:
                                 type: object
                                 example:
-                                    contacts: [{ customerId: 1, displayName: 'Arya DN', givenName: 'Arya GN', middleName: 'Arya MN', prefix: prefix, suffix: suffix, familyName: 'Arya FN', company: Neosantara, jobTitle: Developer, emails: [{ label: label, value: arya@gmail.com }, []], phones: [{ label: label, value: '082323232323' }, []], postalAddresses: 'Jl.letkol basir surya no 1124, tasikmalaya, jawa baarat, indonesia', birthday: '2020-12-20', androidAccountType: voluptas, androidAccountName: 'Arya AC' }, { customerId: 1, displayName: 'Arya DN', givenName: 'Arya GN', company: Neosantara, jobTitle: Developer, emails: [[], []], phones: [[], []] }]
+                                    status: ok
+                                    timestamp: '2021-04-30T11:59:51.367557Z'
+                                    host: 127.0.0.1
                                 properties:
-                                    contacts: { type: array, example: [{ customerId: 1, displayName: 'Arya DN', givenName: 'Arya GN', middleName: 'Arya MN', prefix: prefix, suffix: suffix, familyName: 'Arya FN', company: Neosantara, jobTitle: Developer, emails: [{ label: label, value: arya@gmail.com }, []], phones: [{ label: label, value: '082323232323' }, []], postalAddresses: 'Jl.letkol basir surya no 1124, tasikmalaya, jawa baarat, indonesia', birthday: '2020-12-20', androidAccountType: voluptas, androidAccountName: 'Arya AC' }, { customerId: 1, displayName: 'Arya DN', givenName: 'Arya GN', company: Neosantara, jobTitle: Developer, emails: [[], []], phones: [[], []] }], items: { type: object } }
+                                    status: { type: string, example: ok }
+                                    timestamp: { type: string, example: '2021-04-30T11:59:51.367557Z' }
+                                    host: { type: string, example: 127.0.0.1 }
             tags:
-                - Pelanggan
-            requestBody:
-                required: true
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            properties:
-                                contacts:
-                                    type: array
-                                    description: 'List dari kontak.'
-                                    example: [[], []]
-                                    items: { type: object, properties: { customerId: { type: integer, description: 'valid id pelanggan.', example: 1 }, displayName: { type: string, description: nama., example: 'Arya DN' }, givenName: { type: string, description: nama., example: 'Arya GN' }, middleName: { type: string, description: nama., example: 'Arya MN' }, prefix: { type: string, description: prefix., example: prefix }, suffix: { type: string, description: suffix., example: suffix }, familyName: { type: string, description: nama., example: 'Arya FN' }, company: { type: string, description: perusahaan., example: Neosantara }, jobTitle: { type: string, description: 'nama pekerjaan.', example: Developer }, emails: { type: array, description: 'List dari email.', example: [[], []], items: { type: object, properties: { label: { type: string, description: 'label email.', example: label }, value: { type: string, description: 'value email.', example: arya@gmail.com } } } }, phones: { type: array, description: 'List dari nomor telepon.', example: [[], []], items: { type: object, properties: { label: { type: string, description: 'label phone.', example: label }, value: { type: string, description: 'value phone.', example: '082323232323' } } } }, postalAddresses: { type: string, description: alamat., example: 'Jl.letkol basir surya no 1124, tasikmalaya, jawa baarat, indonesia' }, birthday: { type: string, description: ., example: '2020-12-20' }, androidAccountType: { type: string, description: 'android account type.', example: voluptas }, androidAccountName: { type: string, description: nama., example: 'Arya AC' } }, required: [emails, phones] }
-                            required:
-                                - contacts
+                - Server
             security: []
 components:
     securitySchemes:
